# xayn_dart_api_dl

./: Cargo.toml  Makefile  build.rs
.github/workflows/: ci.yml
dart-api-dl/: Cargo.toml
dart-api-dl-sys/: Cargo.toml
dart-api-dl/src/: lib.rs  lifecycle.rs  ports.rs
dart-api-dl/src/cobject/: owned.rs  reference.rs  rust_values.rs  type_enums.rs
integration-tests-bindings/src/: lib.rs
integration_tests/include/: IntegrationTestsFfi.h
update-lib/src/: main.rs
