[package]
name = "xayn-dart-api-dl"
version = "0.3.0+2.0.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
xayn-dart-api-dl-sys = { path = "../dart-api-dl-sys", version = "0.3.0" }
displaydoc = "0.2.3"
once_cell = { workspace = true }
static_assertions = "1.1.0"
thiserror = { workspace = true }
